textBeforeCursor removal for completer